# housetour

./: .gitignore  COPILOT_INSTRUCTIONS.md  Dockerfile  Makefile  compose.yml  deployment.yaml  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/actions/image/: action.yml
.github/actions/playwright/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: deploy.yml  tests.yml
backend/: app.py  pyproject.toml  qr_codes.py
backend/area/: kitchen.py  living_room.py  markdown_utils.py  routes.py
backend/quiz/: routes.py
backend/static/: style.css
backend/templates/: 404.html  area.html  base.html  index.html  quiz_feedback.html  quiz_leaderboard.html  quiz_leaderboard_auth.html  quiz_leaderboard_edit.html  quiz_question.html  quiz_result.html  quiz_start.html
backend/templates/area/: kitchen.html
data/areas/: 01-hallway.md  02-toilet.md  03-living-room.md  04-kitchen.md  05-dining-room.md  06-bedroom-scott.md  06-bedroom.md  08-bedroom-baby.md  09-bathroom.md  10-attic.md  11-front-garden.md  12-back-garden.md  13-shed.md  attic.md  back_garden.md  bathroom.md  bedroom.md  bedroom_baby.md  bedroom_scott.md  dining_room.md  front_garden.md  hallway.md  kitchen.md  living-room.md  shed.md  toilet.md
