[project]
name = "housetour"
version = "0.1.0"
description = ""
authors = [
    {name = "Steven de jong ðŸŸ",email = "steven@steven-dejong.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask (>=3.1.1,<4.0.0)",
    "segno (>=1.6.6,<2.0.0)",
    "pypdf (>=5.7.0,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "python-frontmatter (>=1.1.0,<2.0.0)",
    "pymongo[srv] (>=4.6.3,<5.0.0)",
    "bson (>=0.5.10,<0.6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
